force-app/main/default/objects/DE_Credit_Info__mdt.object
<CustomObject>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Utilization__c</fullName>
        <label>Credit Utilization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Due__c</fullName>
        <label>Payment Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Credit Info</label>
    <pluralLabel>Credit Info</pluralLabel>
</CustomObject>